src/css/main.css
body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { margin:0; padding:0; }

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: local('Material Icons'),
       local('MaterialIcons-Regular'),
       url('/assets/font-material/MaterialIcons-Regular.woff2') format('woff2'),
       url('/assets/font-material/MaterialIcons-Regular.woff') format('woff'),
       url('/assets/font-material/MaterialIcons-Regular.ttf') format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;
  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;
  /* Support for IE. */
  font-feature-settings: 'liga';
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

html, body {
	box-sizing: border-box;
	height: 100%;
}

*, *:before, *:after {
	box-sizing: inherit;
}

::selection {
	color: #181818;
	background-color: rgba(63,72,83,0.99);
}

::-webkit-scrollbar {
	width: 3px;
	background: #282828;
}

::-webkit-scrollbar-thumb {
	background: #333;
}

body {
	background-color: #282828;
	background-image: url('/assets/grid50.png');
	font-family: 'Roboto', sans-serif;
	color: #dddddd;
	min-height: 100vh;
	flex-direction: row;
}

h1 {
	color: #646363;
	font-weight: 500;
	text-align: center;
}

h2 {
	color: #363636;
	font-size: 20pt;
	font-weight: 400;
}

h3 {
	font-size: 16pt;
	color: #636363;
}

h4 {
	font-weight: normal;
	font-size: 14pt;
	color: #363636;
}

h5 {
	color: #363636;
	font-size: 14pt;
	font-weight: 400;
	font-style: italic;
	margin-top: 15px;
	margin-bottom: 15px;
}

ul {
	list-style: none;
}

li {
	color: #636363;
	font-size: 16pt;
	font-weight: 300;
	padding-top: 7px;
	padding-bottom: 7px;
}

select {
	width: 100%;
	font-size: 16pt;
	padding: 10px;
	color: #636363;
	background: #181818;
	margin-bottom: 5px;
	border: none;
	cursor: pointer;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
}

#container {
	display: flex;
	flex: 1;
	height: 100%;
}

#chart {
	position: relative;
	height: 100%;
	overflow: hidden;
	flex: 1;
}

#panel {
	display: block;
	width: 350px;
	height: 100%;
	min-width: 350px;
	background-color: #202020;
	overflow: scroll;
	overflow-x: hidden;
}

#code {
	display: flex;
	position: relative;
	height: 100%;
	width: 100%;
	background-color: #202020;
	overflow: scroll;
	overflow-x: hidden;
	z-index: 500;
}

#codeMirror, #behaviorConfig {
	flex-direction: row;
	position: relative;
	height: 100%;
	overflow: scroll;
}

#codeMirror {
	cursor: text;
	padding-top: 20px;
	font-size: 14pt;
	flex-grow: 2;
}

#nodeConfigEditor {
	position: absolute;
	background-color: #202020;
	width: 250px;
	min-height: 100px;
	padding: 20px;
}

#nodeConfigEditor .jsoneditor {
	margin-top: 0px;
	height: auto;
}

#nodeConfigEditor div.jsoneditor-menu {
	display: none;
}

#behaviorConfig {
	border-left: 3px #333 solid;
	padding: 20px;
	width: 300px;
	border-radius: 4px;
}

#behaviorConfigEditor, #behaviorConfigEditor .jsoneditor {
	height: 100%;
}

#behaviorProperties {
	margin-bottom: 20px;
}

#behaviorDescription {
	width: 100%;
	font-size: 13pt;
	font-weight: 300;
	color: #636363;
	margin-top: 15px;
	margin-bottom: 5px;
	font-style: italic;
}

#typeSelect {
	margin-top: 18px;
}

#behaviorName:hover {
	background-color: #181818;
}

#treeInfo {
	position: absolute;
	top: 16px;
	left: 0px;
	width: 100%;
	z-index: 100;
	text-align: center;
}

#activeTreeName {
	width: 100%;
}

#activeTreeDesc {
	padding: 10px;
	width: 100%;
	font-style: italic;
	font-weight: normal;
	font-size: 10pt;
	color: #666;
}

#treant {
	width: 100%;
	height: 100%;
}

#controls {
	position: absolute;
	bottom: 16px;
	width: 100%;
	height: 67px;
	text-align: center;
	z-index: 100;
	display: none;
}

#memory {
	position: absolute;
	right: 0px;
	bottom: 0px;
	width: 400px;
	background-color: #202020;
}

#memory h2 {
	font-size: 16pt;
}

#nodeMemory, #treeMemory, #subjMemory {
	width: 100%;
	flex-grow: 1;
	flex-shrink: 1;
	flex-basis: auto;
	transition: all 0.2s;
	padding: 20px;
}

#nodeMemory {
	border-bottom: 1px #282828 solid;
}

#treeMemory {
	border-bottom: 1px #282828 solid;
}

.collapsed {
    flex-grow: 0.001 !important;
}

.hidden {
	display: none !important;
}

.rotate {
	transform: rotate(180deg);
}

input {
	font-size: 16pt;
	padding: 10px;
	margin-bottom: 5px;
	background-color: #181818;
	border: none;
	color: #636363;
	outline: none;
	outline-color: #3f4853;
}

button {
	background-color: #202020;
	color: #363636;
	border: none;
	height: 100%;
	cursor: pointer;
}

button:hover {
	color: #c5c5c5;
}

#contextmenu {
	display: none;
	position: absolute;
	top: 0px;
	left: 0px;
	width: 120px;
	border-radius: 6px;
	background: #454545;
	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
}

#contextmenu div {
	cursor: pointer;
	position: relative;
	padding: 10px;
	border-top: 1px rgba(255, 255, 255, 0.05) solid;
	border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
}

#contextmenu div:first-child {
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
}

#contextmenu div:last-child {
	border-bottom-right-radius: 5px;
	border-bottom-left-radius: 5px;
}

#contextmenu div:hover {
	background: #577499;
}

#contextmenu #commandErase:hover {
	background: #AD4640;
}

#contextmenu span {
	position: absolute;
	top: 13px;
	left: 45px;
}

#contextmenu .disabled {
	opacity: 0.2;
	cursor: default;
}

#contextmenu .disabled:hover {
	background: none !important;
}

.alertify-logs {
	z-index: 1000;
}

.alertify-logs .default, .alertify-logs .error, .alertify-logs .success {
	padding: 20px;
	color: #dddddd;
	background-color: #363636;
	border-radius: 4px;
}

.alertify-logs .success {
	color: #282828;
	background-color: #299b44;
}

.alertify-logs .error {
	color: #282828;
	background-color: #d2521a;
}

#saveCode {
	z-index: 10;
	display: block;
	position: absolute;
	bottom: 10px;
	left: 10px;
	width: auto;
	height: auto;
	font-weight: 500;
	color: #181818;
	border-radius: 4px;
	background: #454545;
	font-size: 16pt;
	font-weight: 300;
	padding: 5px;
}

#saveCode i {
	margin-top: -3px;
	padding-right: 2px;
	vertical-align: middle;
}

#saveCode:hover {
	background: #666;
}

